# iris-named-props

./: Makefile.coq.local  README.md  _CoqProject  iris-named-props.opam  test-normalizer.sed
.github/workflows/: build.yml
src/: NamedProps.v  custom_syntax.v  named_props.v
tests/: NamedProps.v  custom_syntax.ref  custom_syntax.v  gh10.ref  gh10.v  named_props.ref  named_props.v  readme_example.v  split_delay.ref  split_delay.v
